[package]
name = "ai_function_call"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.0"
chrono = "0.4.35"
hmac = "0.12.1"
json = "0.12.4"
reqwest = { version = "0.11.26", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
sha2 = "0.10.8"
thiserror = "1.0.58"
tokio = { version = "1.36.0", features = ["full"] }
valico = "4.0.0"
